syntax = "proto3";

package api.v1.database;

import "google/protobuf/timestamp.proto";

message Table {
  string name = 1;
}

enum Type {
  TYPE_UNSPECIFIED = 0;
  TYPE_MONGODB = 1;
  TYPE_POSTGRES = 2;
}

message Database {
  string database_id = 1;
  string name = 2;
  Type type = 3;
  repeated string client_ids = 4;
  repeated Table tables = 5;
  google.protobuf.Timestamp created_at = 6;
}
