syntax = "proto3";

package api.v1.database;

import "api/v1/database/database.proto";
import "model/common.proto";

// The service to manage databases.
service Service {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc GetByName(GetByNameRequest) returns (GetByNameResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}

  rpc CreateTable(CreateTableRequest) returns (CreateTableResponse) {}
  rpc DeleteTable(DeleteTableRequest) returns (DeleteTableResponse) {}
  rpc ListTables(ListTablesRequest) returns (ListTablesResponse) {}
}

message GetByNameRequest {
  string name = 1;
}

message GetByNameResponse {
  api.v1.database.Database database = 2;
}

message CreateRequest {
  string name = 1;
  api.v1.database.Config config = 2;
  bool link_tables = 3;
}

message CreateResponse {
  database.Database database = 1;
}

message GetRequest {
  string database_id = 1;
}

message GetResponse {
  api.v1.database.Database database = 1;
}

message DeleteRequest {
  string database_id = 1;
}

message DeleteResponse {}

message ListRequest {
  model.Pagination pagination = 1;
}

message ListResponse {
  repeated api.v1.database.Database databases = 1;
  uint64 total = 2;
}

message CreateTableRequest {
  string database_id = 1;
  string table_name = 2;
}

message CreateTableResponse {}

message DeleteTableRequest {
  string database_id = 1;
  string table_name = 2;
}

message DeleteTableResponse {}

message ListTablesRequest {
  model.Pagination pagination = 2;
  string database_id = 1;
}

message ListTablesResponse {
  repeated database.Table tables = 1;
  uint64 total = 2;
}
